--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -36,7 +36,7 @@ else:
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface', 'dns_uve'])
 env.Append(LIBS=['sandesh', 'http', 'http_parser', 'boost_filesystem'])
 
-if not sys.platform.startswith('win') and sys.platform != 'darwin':
+if sys.platform not in ['win32', 'darwin']:
     env.Append(LIBS=['rt'])
 
 libs = MapBuildDir(['base', 'db', 'ifmap', 'io', 'net', 'xml', 'schema', 'xmpp', 'bgp',
@@ -44,7 +44,7 @@ libs = MapBuildDir(['base', 'db', 'ifmap', 'io', 'net', 'xml', 'schema', 'xmpp',
                     'discovery/client', 'http/client'])
 env.Append(LIBPATH=libs)
 
-if not sys.platform.startswith('win') and sys.platform != 'darwin':
+if sys.platform not in ['win32', 'darwin']:
     env.Prepend(LINKFLAGS =
                      ['-Wl,--whole-archive',
                       '-lbase', '-lifmap_server', '-rdynamic',
