JW-914: agent-controller communication-related tests (#56)
* JW-914: build xmpp tests

* JW-914: build other comms-related tests

* JW-914: cleanup

* JW-914: review fixes

--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -24,13 +24,19 @@ env.Prepend(CPPPATH = env['TOP'] + '/http/client')
 env.Prepend(LIBS=['ifmap_vnc', 'ifmap_server', 'ifmap_common', 'net', 'ifmapio',
                   'xmpp', 'ds', 'sandeshvns', 'peer_sandesh', 'table_sandesh',
                   'httpc', 'curl', 'process_info',
-                  'db', 'io', 'base', 'xml', 'pugixml', 'libxml2',
-                  'boost_regex', 'boost_chrono', 'boost_program_options',
+                  'db', 'io', 'base', 'xml', 'pugixml',
+                  'boost_regex', 'boost_program_options',
                   'libeay32', 'ssleay32'])
+
+if sys.platform.startswith('win'):
+    env.Prepend(LIBS=['xml2', 'advapi32', 'gdi32', 'version', 'windowsstubs'])
+else:
+    env.Prepend(LIBS=['libxml2', 'boost_chrono'])
+
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface', 'dns_uve'])
 env.Append(LIBS=['sandesh', 'http', 'http_parser', 'boost_filesystem'])
 
-if sys.platform != 'darwin':
+if sys.platform not in ['win32', 'darwin']:
     env.Append(LIBS=['rt'])
 
 libs = MapBuildDir(['base', 'db', 'ifmap', 'io', 'net', 'xml', 'schema', 'xmpp', 'bgp',
@@ -38,7 +44,7 @@ libs = MapBuildDir(['base', 'db', 'ifmap', 'io', 'net', 'xml', 'schema', 'xmpp',
                     'discovery/client', 'http/client'])
 env.Append(LIBPATH=libs)
 
-if sys.platform != 'darwin':
+if sys.platform not in ['win32', 'darwin']:
     env.Prepend(LINKFLAGS =
                      ['-Wl,--whole-archive',
                       '-lbase', '-lifmap_server', '-rdynamic',
