JW-1178 wip:changed msi file to restart service

--- a/src/vnsw/agent/contrail/SConscript
+++ b/src/vnsw/agent/contrail/SConscript
@@ -119,6 +119,8 @@ env.Default(contrail_vrouter_agent)
 if sys.platform.startswith('win'):
     #Use WiX for MSI generation
     agent_msi = env.WiX('contrail-vrouter-agent.msi', ['windows/msi/agent_msi.wxs'])
+    env.Append(WIXLIGHTFLAGS = ['-ext', 'WixUtilExtension.dll'])
+    env.Append(WIXCANDLEFLAGS = ['-ext', 'WixUtilExtension.dll'])
     env.Depends(agent_msi, [contrail_vrouter_agent, 'winsw'])
 
     env.Alias('contrail-vrouter-agent.msi', agent_msi)
