--- a/lib/thrift/SConscript
+++ b/lib/thrift/SConscript
@@ -13,18 +13,22 @@ abs_vpath = Dir(vpath).abspath
 include_path = os.path.join(env.Dir(env['TOP_INCLUDE']).abspath, r'thrift')
 
 msbuild = os.environ['MSBUILD']
+if env['OPT'] == 'debug':
+    configuration = 'Debug'
+elif env['OPT'] == 'production':
+    configuration = 'Release'
 
 def build_thrift_exe_for_windows(target,source,env):
     copy_tree(os.path.join( Dir('.').srcnode().abspath, r'controller\lib\thrift\msvc15\compiler'), os.path.join(abs_vpath, 'compiler'))
-    subprocess.call([msbuild, 'compiler.vcxproj', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd=os.path.join(abs_vpath, r'compiler\cpp'))
-    copyfile(os.path.join(abs_vpath, r'compiler\cpp\x64\Debug\thrift.exe'), os.path.join(env.Dir(env['TOP_BIN']).abspath, r'thrift.exe'))
+    subprocess.call([msbuild, 'compiler.vcxproj', '/p:Configuration=' + configuration, '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd=os.path.join(abs_vpath, r'compiler\cpp'))
+    copyfile(os.path.join(abs_vpath, r'compiler\cpp\x64\\' + configuration + r'\thrift.exe'), os.path.join(env.Dir(env['TOP_BIN']).abspath, r'thrift.exe'))
 
 def build_thrift_libs_for_windows(target,source,env):
     copy_tree(os.path.join( Dir('.').srcnode().abspath, r'controller\lib\thrift\msvc15\lib'), os.path.join(abs_vpath, 'lib'))
-    subprocess.call([msbuild, 'thrift.sln', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd=os.path.join(abs_vpath, r'lib\cpp'))
-    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\Debug\libthrift.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thrift.lib'))
-    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\Debug\libthriftnb.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thriftnb.lib'))
-    files = glob.iglob(os.path.join(abs_vpath, r"lib\cpp\src\*.h"))
+    subprocess.call([msbuild, 'thrift.sln', '/p:Configuration=' + configuration, '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd=os.path.join(abs_vpath, r'lib\cpp'))
+    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\\' + configuration + r'\libthrift.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thrift.lib'))
+    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\\' + configuration + r'\libthriftnb.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thriftnb.lib'))
+    files = glob.iglob(os.path.join(abs_vpath, r'lib\cpp\src\*.h'))
     if not os.path.exists(include_path):
         os.makedirs(include_path)
     for file in files:
