--- a/src/vnsw/agent/contrail/SConscript
+++ b/src/vnsw/agent/contrail/SConscript
@@ -119,8 +119,16 @@ env.Default(contrail_vrouter_agent)
 if sys.platform.startswith('win'):
     #Use WiX for MSI generation
     agent_msi = env.WiX('contrail-vrouter-agent.msi', ['windows/msi/agent_msi.wxs'])
-    env.Append(WIXLIGHTFLAGS = ['-ext', 'WixUtilExtension.dll'])
+    env.Append(WIXCANDLEFLAGS = ['-doptimization=' + env['OPT']])
+    if env['OPT'] == 'debug':
+        env.Append(WIXCANDLEFLAGS = ['-dTbbDll=tbb_debug.dll'])
+        env.Append(WIXCANDLEFLAGS = ['-dLog4CPlusDll=log4cplusD.dll'])
+    elif env['OPT'] == 'production':
+        env.Append(WIXCANDLEFLAGS = ['-dTbbDll=tbb.dll'])
+        env.Append(WIXCANDLEFLAGS = ['-dLog4CPlusDll=log4cplus.dll'])
+
     env.Append(WIXCANDLEFLAGS = ['-ext', 'WixUtilExtension.dll'])
+    env.Append(WIXLIGHTFLAGS = ['-ext', 'WixUtilExtension.dll'])
     env.Depends(agent_msi, [contrail_vrouter_agent, 'winsw'])
 
     env.Alias('contrail-vrouter-agent.msi', agent_msi)
