--- a/lib/windowsstubs/SConscript
+++ b/lib/windowsstubs/SConscript
@@ -6,7 +6,13 @@ vpath = '#windows/src'
 env.VariantDir('#/' + Dir('.').path + '/src', vpath, duplicate=0)
 buildpath = Dir('.').abspath + '/src'
 
-files = Glob(buildpath + '/misc/*.cc') + [buildpath + '/sys/ioctl.cc', buildpath + '/sys/time.cc', buildpath + '/strings.cc', buildpath + '/unistd.cc', buildpath + '/posix_time.cc', buildpath + '/posix_stdlib.cc']
+files = Glob(buildpath + '/misc/*.cc') + [buildpath + '/sys/ioctl.cc',
+                                          buildpath + '/sys/time.cc',
+                                          buildpath + '/sys/eventfd.cc',
+                                          buildpath + '/strings.cc',
+                                          buildpath + '/unistd.cc',
+                                          buildpath + '/posix_time.cc',
+                                          buildpath + '/posix_stdlib.cc',]
 windowsstubs_lib = env.Library('windowsstubs', files)
 env.Install('#/build/lib/', 'windowsstubs.lib')
 env.Alias('windowsstubs', '#/build/lib/windowsstubs.lib')
