--- a/src/vnsw/agent/vrouter/ksync/SConscript
+++ b/src/vnsw/agent/vrouter/ksync/SConscript
@@ -20,10 +20,10 @@ if sys.platform.startswith('linux'):
     except_files = [ 'vnswif_listener_base.cc', 'linux/vnswif_listener.cc' ]
 elif sys.platform.startswith('freebsd'):
     except_files = [ 'vnswif_listener_base.cc', 'freebsd/vnswif_listener.cc' ]
-elif sys.platform.startswith('win'):
-    except_files = [ 'vnswif_listener_base.cc', 'windows/vnswif_listener.cc' ]
 
-except_objs = AgentEnv.BuildExceptionCcObj(env, except_files)
+except_objs = []
+if not sys.platform.startswith('win'):
+    except_objs.append(AgentEnv.BuildExceptionCcObj(env, except_files))
 
 libksync = env.Library('vnswksync',
                        sandesh_objs +
