--- a/src/vnsw/agent/oper/test/SConscript
+++ b/src/vnsw/agent/oper/test/SConscript
@@ -95,7 +95,7 @@ test_physical_devices = AgentEnv.MakeTestCmdSrc(env, 'test_physical_devices',
                                                 [
                                                 'test_physical_devices.cc',
                                                 'test_xml_agent_init.cc',
-                                                '../../pkt/test/test_pkt_util.o'
+                                                '../../pkt/test/test_pkt_util' + env['OBJSUFFIX'],
                                                 ],
                                                 oper_test_suite)
 
