--- a/src/vnsw/agent/contrail/SConscript
+++ b/src/vnsw/agent/contrail/SConscript
@@ -21,14 +21,14 @@ if not sys.platform.startswith('win'):
 
 # Dependencies on external libraries first
 buildinfo_dep_libs = [
-    '#build/lib/thrift.lib',
-    '#build/lib/thriftnb.lib',
-    '#build/lib/http.lib',
-    '#build/lib/http_parser.lib',
-    '#build/lib/pugixml.lib',
-    '#build/lib/sandesh.lib',
-    '#build/lib/sandeshflow.lib',
-    '#build/lib/sandeshvns.lib'
+    '#build/lib/' + env['LIBPREFIX'] + 'thrift' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'thriftasio' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'http' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'http_parser' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'pugixml' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'sandesh' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'sandeshflow' + env['LIBSUFFIX'],
+    '#build/lib/' + env['LIBPREFIX'] + 'sandeshvns' + env['LIBSUFFIX'],
 ]
 
 def MapBuildCmnLib(list):
@@ -36,24 +36,24 @@ def MapBuildCmnLib(list):
 
 # Common contrail libraries
 buildinfo_dep_libs += MapBuildCmnLib([
-    'base/base.lib',
-    'base/cpuinfo.lib',
-    'db/db.lib',
-    'dns/bind/bind_interface.lib',
-    'dns/cmn/cmn.lib',
-    'ifmap/ifmap_agent.lib',
-    'ifmap/ifmap_common.lib',
-    'io/io.lib',
-    'ksync/ksync.lib',
-    'net/net.lib',
-    'route/route.lib',
-    'schema/bgp_schema.lib',
-    'schema/ifmap_vnc.lib',
-    'schema/xmpp_unicast.lib',
-    'schema/xmpp_multicast.lib',
-    'vrouter/utils/vrutil.lib',
-    'xml/xml.lib',
-    'xmpp/xmpp.lib',
+    'base/' + env['LIBPREFIX'] + 'base' + env['LIBSUFFIX'],
+    'base/' + env['LIBPREFIX'] + 'cpuinfo' + env['LIBSUFFIX'],
+    'db/' + env['LIBPREFIX'] + 'db' + env['LIBSUFFIX'],
+    'dns/bind/' + env['LIBPREFIX'] + 'bind_interface' + env['LIBSUFFIX'],
+    'dns/cmn/' + env['LIBPREFIX'] + 'cmn' + env['LIBSUFFIX'],
+    'ifmap/' + env['LIBPREFIX'] + 'ifmap_agent' + env['LIBSUFFIX'],
+    'ifmap/' + env['LIBPREFIX'] + 'ifmap_common' + env['LIBSUFFIX'],
+    'io/' + env['LIBPREFIX'] + 'io' + env['LIBSUFFIX'],
+    'ksync/' + env['LIBPREFIX'] + 'ksync' + env['LIBSUFFIX'],
+    'net/' + env['LIBPREFIX'] + 'net' + env['LIBSUFFIX'],
+    'route/' + env['LIBPREFIX'] + 'route' + env['LIBSUFFIX'],
+    'schema/' + env['LIBPREFIX'] + 'bgp_schema' + env['LIBSUFFIX'],
+    'schema/' + env['LIBPREFIX'] + 'ifmap_vnc' + env['LIBSUFFIX'],
+    'schema/' + env['LIBPREFIX'] + 'xmpp_unicast' + env['LIBSUFFIX'],
+    'schema/' + env['LIBPREFIX'] + 'xmpp_multicast' + env['LIBSUFFIX'],
+    'vrouter/utils/' + env['LIBPREFIX'] + 'vrutil' + env['LIBSUFFIX'],
+    'xml/' + env['LIBPREFIX'] + 'xml' + env['LIBSUFFIX'],
+    'xmpp/' + env['LIBPREFIX'] + 'xmpp' + env['LIBSUFFIX'],
 	 ])
 
 def MapBuildAgentLib(list):
@@ -61,20 +61,23 @@ def MapBuildAgentLib(list):
 
 # agent libraries
 buildinfo_dep_libs += MapBuildAgentLib([
-    'cfg/cfg.lib',
-    'cmn/vnswcmn.lib',
-    'controller/vnswctrl.lib',
-    'filter/filter.lib',
-    'kstate/kstate.lib',
-    'vrouter/ksync/vnswksync.lib',
-    'openstack/nova_ins.lib',
-    'openstack/nova_ins_thrift.lib',
-    'port_ipc/port_ipc.lib',
-    'oper/vnswoperdb.lib',
-    'pkt/pkt.lib', 'diag/diag.lib',
-    'services/agent_services.lib', 'uve/uve.lib',
-    'uve/statsuve.lib', 'vrouter/flow_stats/flowstats.lib',
-    'vrouter/stats_collector/statscollector.lib',
+    'cfg/' + env['LIBPREFIX'] + 'cfg' + env['LIBSUFFIX'],
+    'cmn/' + env['LIBPREFIX'] + 'vnswcmn' + env['LIBSUFFIX'],
+    'controller/' + env['LIBPREFIX'] + 'vnswctrl' + env['LIBSUFFIX'],
+    'filter/' + env['LIBPREFIX'] + 'filter' + env['LIBSUFFIX'],
+    'kstate/' + env['LIBPREFIX'] + 'kstate' + env['LIBSUFFIX'],
+    'vrouter/ksync/' + env['LIBPREFIX'] + 'vnswksync' + env['LIBSUFFIX'],
+    'openstack/' + env['LIBPREFIX'] + 'nova_ins' + env['LIBSUFFIX'],
+    'openstack/' + env['LIBPREFIX'] + 'nova_ins_thrift' + env['LIBSUFFIX'],
+    'port_ipc/' + env['LIBPREFIX'] + 'port_ipc' + env['LIBSUFFIX'],
+    'oper/' + env['LIBPREFIX'] + 'vnswoperdb' + env['LIBSUFFIX'],
+    'pkt/' + env['LIBPREFIX'] + 'pkt' + env['LIBSUFFIX'],
+    'diag/' + env['LIBPREFIX'] + 'diag' + env['LIBSUFFIX'],
+    'services/' + env['LIBPREFIX'] + 'agent_services' + env['LIBSUFFIX'],
+    'uve/' + env['LIBPREFIX'] + 'uve' + env['LIBSUFFIX'],
+    'uve/' + env['LIBPREFIX'] + 'statsuve' + env['LIBSUFFIX'],
+    'vrouter/flow_stats/' + env['LIBPREFIX'] + 'flowstats' + env['LIBSUFFIX'],
+    'vrouter/stats_collector/' + env['LIBPREFIX'] + 'statscollector' + env['LIBSUFFIX'],
 ])
 
 env.GenerateBuildInfoCode(
@@ -82,7 +85,6 @@ env.GenerateBuildInfoCode(
     source = buildinfo_dep_libs + ['main.cc'],
     path=str(Dir('.').abspath))
 env.Depends('main.o', 'buildinfo.cc')
-#env['LINKFLAGS'].remove('/DEBUG')
 
 # Add contrail-vrouter-agent specific libraries
 env.Prepend(LIBS = AgentEnv['CONTRAIL_LIBS'])
