--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -26,7 +26,7 @@ env.Prepend(LIBS=['ifmap_vnc', 'ifmap_server', 'ifmap_common', 'net', 'ifmapio',
                   'httpc', 'curl', 'process_info',
                   'db', 'io', 'base', 'xml', 'pugixml',
                   'boost_regex', 'boost_program_options',
-                  'libeay32', 'ssleay32'])
+                  'libeay32', 'ssleay32', 'boost_filesystem'])
 
 if sys.platform.startswith('win'):
     env.Prepend(LIBS=['xml2', 'advapi32', 'gdi32', 'version'])
@@ -34,7 +34,7 @@ else:
     env.Prepend(LIBS=['libxml2', 'boost_chrono'])
 
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface', 'dns_uve'])
-env.Append(LIBS=['sandesh', 'http', 'http_parser', 'boost_filesystem'])
+env.Append(LIBS=['sandesh', 'http', 'http_parser'])
 
 if sys.platform not in ['win32', 'darwin']:
     env.Append(LIBS=['rt'])
