--- a/src/schema/test/SConscript
+++ b/src/schema/test/SConscript
@@ -18,7 +18,7 @@ env.Prepend(LIBS = ['sandesh', 'http', 'http_parser', 'curl', 'db',
                     'process_info', 'sandeshvns', 'io', 'base', 
                     'gunit', 'pugixml'])
 
-if sys.platform.startswith('win'):
+if sys.platform == 'win32':
     env.Append(LIBS = ['windowsstubs'])
 
 if sys.platform not in ['win32', 'darwin']:
