--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -29,7 +29,7 @@ env.Prepend(LIBS=['ifmap_vnc', 'ifmap_server', 'ifmap_common', 'net', 'ifmapio',
                   'libeay32', 'ssleay32'])
 
 if sys.platform.startswith('win'):
-    env.Prepend(LIBS=['xml2', 'advapi32', 'gdi32', 'version', 'windowsstubs'])
+    env.Prepend(LIBS=['xml2', 'advapi32', 'gdi32', 'version'])
 else:
     env.Prepend(LIBS=['libxml2', 'boost_chrono'])
 
