--- a/src/ksync/test/SConscript
+++ b/src/ksync/test/SConscript
@@ -28,9 +28,7 @@ env.Prepend(LIBS=['thrift','xmpp', 'peer_sandesh', 'table_sandesh',
                   'cpuinfo', 'pugixml'])
 
 if sys.platform != 'darwin':
-    if sys.platform.startswith('win'):
-        env.Append(LIBS=['windowsstubs'])
-    else:
+    if sys.platform != 'win32':
         env.Append(LIBS=['rt'])
     env.Prepend(LIBS=['ksync', 'ksyncnl'])
 
