--- a/src/xmpp/test/SConscript
+++ b/src/xmpp/test/SConscript
@@ -33,7 +33,7 @@ env.Prepend(LIBS = ['task_test', 'gunit', 'xmpp', 'xml', 'pugixml', 'sandesh',
                     'sandesh'])
 
 if sys.platform.startswith('win'):
-    env.Append(LIBS = ['ssleay32', 'libeay32', 'advapi32', 'gdi32', 'windowsstubs'])
+    env.Append(LIBS = ['ssleay32', 'libeay32', 'advapi32', 'gdi32'])
 else:
     env.Append(LIBS = ['ssl', 'crypto'])
 
