JW-1332: src/bgp cleanup

--- a/src/bgp/ermvpn/test/SConscript
+++ b/src/bgp/ermvpn/test/SConscript
@@ -68,8 +68,8 @@ env.Prepend(LIBS = [
                     'db',
                     'gunit',
                     'io',
-                    'libeay32',
-                    'ssleay32',
+                    'crypto',
+                    'ssl',
                     'sandeshvns',
                     'net',
                     'route',
