--- a/src/dns/cmn/SConscript
+++ b/src/dns/cmn/SConscript
@@ -51,4 +51,5 @@ for src in SandeshGenSrcs:
 
 dns_cmn = env.Library('cmn',
                       sandesh_objs + cmn_sources +
-                      ['buildinfo.cc'])
+                      ['buildinfo.cc',
+                      ])
