--- a/src/vnsw/agent/ovs_tor_agent/SConscript
+++ b/src/vnsw/agent/ovs_tor_agent/SConscript
@@ -23,7 +23,7 @@ env.Prepend(LIBS = [
                     'vnswinit'
                    ])
 
-env.Append(LIBS = ['ssleay32', 'crypto'])
+env.Append(LIBS = ['ssl', 'crypto'])
 
 env.GenerateBuildInfoCode(
     target='buildinfo.cc',
@@ -31,7 +31,8 @@ env.GenerateBuildInfoCode(
     path=str(Dir('.').abspath))
 
 env = AgentEnv.RemoveExceptionFlag(env)
-env.AppendUnique(CCFLAGS='/w')
+env.AppendUnique(CCFLAGS='-Wno-reorder')
+env.AppendUnique(CCFLAGS='-Wno-return-type')
 
 contrail_tor_agent = env.Program(target = 'contrail-tor-agent',
                         source = [
