--- a/src/vnsw/agent/openstack/SConscript
+++ b/src/vnsw/agent/openstack/SConscript
@@ -14,7 +14,10 @@ Import('AgentEnv')
 env = AgentEnv.Clone()
 
 env = AgentEnv.RemoveExceptionFlag(env)
-env.AppendUnique(CCFLAGS='/w')
+if sys.platform != 'win32':
+    env.AppendUnique(CCFLAGS='-Wno-reorder')
+    env.AppendUnique(CCFLAGS='-Wno-return-type')
+    env.AppendUnique(CCFLAGS='-Wno-unused-variable')
 
 targets = env.ThriftGenCpp('instance_service.thrift', True)
 lib_srcs = env.ExtractCpp(targets)
