--- a/src/vnsw/agent/contrail/SConscript
+++ b/src/vnsw/agent/contrail/SConscript
@@ -103,7 +103,7 @@ if sys.platform.startswith('freebsd'):
 elif sys.platform.startswith('linux'):
     platform_dependent = 'linux/pkt0_interface.cc'
 elif sys.platform.startswith('win'):
-    env.Append(LIBS = ['version', 'iphlpapi.lib'])
+    env.Append(LIBS = ['version'])
     platform_dependent = ['windows/pkt0_interface.cc', env.RES('windows/resource.rc')]
 
 
