--- a/lib/windowsstubs/SConscript
+++ b/lib/windowsstubs/SConscript
@@ -14,7 +14,8 @@ files = Glob(buildpath + '/misc/*.cc') + [buildpath + '/sys/ioctl.cc',
                                           buildpath + '/strings.cc',
                                           buildpath + '/unistd.cc',
                                           buildpath + '/posix_time.cc',
-                                          buildpath + '/posix_stdlib.cc',]
+                                          buildpath + '/posix_stdlib.cc',
+                                          buildpath + '/fcntl.cc',]
 windowsstubs_lib = env.Library('windowsstubs', files)
 env.Install('#/build/lib/', 'windowsstubs.lib')
 env.Alias('windowsstubs', '#/build/lib/windowsstubs.lib')
