--- a/src/vnsw/agent/oper/SConscript
+++ b/src/vnsw/agent/oper/SConscript
@@ -24,6 +24,11 @@ optional_objs = []
 if GetOption('with_libvirt'):
     optional_objs.append(except_env.Object('libvirt_instance_adapter.cc'))
 
+if sys.platform == 'win32':
+    os_specific_src = 'windows/interface_params.cc'
+else:
+    os_specific_src = 'nix/interface_params.cc'
+
 vnswoperdb = env.Library('vnswoperdb',
                          sandesh_objs +
                          optional_objs +
@@ -73,7 +78,8 @@ vnswoperdb = env.Library('vnswoperdb',
                           'vrf.cc',
                           'vrf_assign.cc',
                           'vrouter.cc',
-                          'vxlan.cc'
+                          'vxlan.cc',
+                          os_specific_src,
                          ])
 subdirs = ['test']
 for dir in subdirs:
