JW-1314 dns cleanup (#86)

--- a/src/dns/SConscript
+++ b/src/dns/SConscript
@@ -24,17 +24,18 @@ env.Prepend(CPPPATH = env['TOP'] + '/http/client')
 env.Prepend(LIBS=['ifmap_vnc', 'ifmap_server', 'ifmap_common', 'net', 'ifmapio',
                   'xmpp', 'ds', 'sandeshvns', 'peer_sandesh', 'table_sandesh',
                   'httpc', 'curl', 'process_info',
-                  'db', 'io', 'base', 'xml', 'pugixml',
+                  'db', 'io', 'base', 'xml', 'pugixml', 'xml2',
                   'boost_regex', 'boost_program_options',
-                  'libeay32', 'ssleay32'])
+                  'crypto', 'ssl',
+                  'boost_filesystem'])
 
 if sys.platform.startswith('win'):
-    env.Prepend(LIBS=['xml2', 'advapi32', 'gdi32', 'version'])
+    env.Prepend(LIBS=['advapi32', 'gdi32', 'version'])
 else:
-    env.Prepend(LIBS=['libxml2', 'boost_chrono'])
+    env.Prepend(LIBS=['boost_chrono'])
 
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface', 'dns_uve'])
-env.Append(LIBS=['sandesh', 'http', 'http_parser', 'boost_filesystem'])
+env.Append(LIBS=['sandesh', 'http', 'http_parser'])
 
 if sys.platform not in ['win32', 'darwin']:
     env.Append(LIBS=['rt'])
