--- a/src/SConscript
+++ b/src/SConscript
@@ -45,7 +45,7 @@ include = ['#/controller/src', '#/build/include', '#controller/lib']
 
 libpath = ['#/build/lib']
 
-libs = ['boost_system', 'log4cplus']
+libs = ['boost_system', 'boost_thread', 'log4cplus']
 if sys.platform.startswith('win'):
     libs.append('windowsstubs')
 else:
